--- a/.github/workflows/publish-releases.yml
+++ b/.github/workflows/publish-releases.yml
@@ -97,7 +97,9 @@ jobs:
           auth-token: ${{ secrets.NPM_TOKEN }}
 
       - name: Verify NPM Authentication
-        run: npm whoami
+        run: |
+          echo "NPM_TOKEN: ${{ secrets.NPM_TOKEN }}"
+          npm whoami
 
       # Optional: also write .npmrc manually if needed
       - name: Configure .npmrc in repo root
