--- a/.github/workflows/publish-releases.yml
+++ b/.github/workflows/publish-releases.yml
@@ -92,6 +92,9 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "22.4.1"
+          registry-url: "https://registry.npmjs.org"
+          always-auth: true'
+          auth-token: ${{ secrets.NPM_TOKEN }}
 
       - name: Install Dependencies
         run: npm ci
