--- a/.github/workflows/publish-releases.yml
+++ b/.github/workflows/publish-releases.yml
@@ -8,29 +8,29 @@ on:
   workflow_dispatch:
     inputs:
       publish_to_github:
-        description: 'Publish to GitHub Release'
+        description: "Publish to GitHub Release"
         required: false
-        default: 'false'
+        default: "false"
         type: boolean
       publish_to_npm:
-        description: 'Publish to npm'
+        description: "Publish to npm"
         required: false
-        default: 'false'
+        default: "false"
         type: boolean
       github_tag:
-        description: 'Release tag for GitHub (e.g., v1.0.0)'
+        description: "Release tag for GitHub (e.g., v1.0.0)"
         required: false
         type: string
       github_release_notes:
-        description: 'Release notes for GitHub'
+        description: "Release notes for GitHub"
         required: false
         type: string
       npm_version:
-        description: 'npm package version (e.g., 1.0.0)'
+        description: "npm package version (e.g., 1.0.0)"
         required: false
         type: string
       npm_release_notes:
-        description: 'Release notes for npm'
+        description: "Release notes for npm"
         required: false
         type: string
 
@@ -92,6 +92,9 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "22.4.1"
+          registry-url: "https://registry.npmjs.org"
+          always-auth: true'
+          auth-token: ${{ secrets.NPM_TOKEN }}
 
       - name: Install Dependencies
         run: npm ci
@@ -102,14 +105,31 @@ jobs:
       - name: Update package version
         if: ${{ github.event.inputs.npm_version }}
         run: |
-          npm version ${{ github.event.inputs.npm_version }} --no-git-tag-version
+          if npm version ${{ github.event.inputs.npm_version }} --no-git-tag-version; then
+            echo "Updated package version to ${{ github.event.inputs.npm_version }}"
+          else
+            echo "Package version already set to ${{ github.event.inputs.npm_version }}"
+          fi
           git config --global user.email "${{ secrets.GIT_USER_EMAIL }}"
           git config --global user.name "${{ secrets.GIT_USER_NAME }}"
-          git add package.json
-          git commit -m "chore: release version ${{ github.event.inputs.npm_version }}"
-          git push
+          if ! git diff --quiet HEAD -- package.json; then
+            echo "Changes detected in package.json. Committing..."
+            git add package.json
+            git commit -m "chore: release version ${{ github.event.inputs.npm_version }}"
+            git push
+          else
+            echo "No changes in package.json to commit."
+          fi
+        env:
+          GIT_AUTH_TOKEN: ${{ secrets.GIT_TOKEN }}
 
       - name: Publish to npm
-        run: npm publish
+        run: |
+          if npm publish; then
+            echo "Published version ${{ github.event.inputs.npm_version }} to npm"
+          else
+            echo "Failed to publish version ${{ github.event.inputs.npm_version }} to npm"
+            exit 1
+          fi
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
