--- a/.github/workflows/publish-releases.yml
+++ b/.github/workflows/publish-releases.yml
@@ -36,6 +36,7 @@ on:
 
 jobs:
   publish_github_release:
+    needs: publish_npm_release
     name: Publish to GitHub Release
     if: ${{ github.event.inputs.publish_to_github == 'true' }}
     runs-on: ubuntu-latest
