chore: additional keyword

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "conversational-bot",
     "conversational-ui",
     "frontend-library",
-    "plugins"
+    "plugins",
+    "react-chatbotify"
   ],
   "files": [
     "./dist"
